--- a/Days Until Seasons/Interface/Base.lproj/Main.storyboard
+++ b/Days Until Seasons/Interface/Base.lproj/Main.storyboard
@@ -24,19 +24,17 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="QoI-od-WDe">
                                 <rect key="frame" x="60" y="40" width="480" height="520"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Winter" translatesAutoresizingMaskIntoConstraints="NO" id="aZL-IK-q87">
-                                        <rect key="frame" x="170" y="0.0" width="140" height="227"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loop" translatesAutoresizingMaskIntoConstraints="NO" id="aZL-IK-q87">
+                                        <rect key="frame" x="170" y="0.0" width="140" height="200"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="140" id="8oX-6o-jdS">
-                                                <variation key="heightClass=compact" constant="0.0"/>
-                                            </constraint>
+                                            <constraint firstAttribute="width" constant="140" id="t6C-xr-6rl"/>
                                         </constraints>
                                         <variation key="heightClass=compact-widthClass=regular" misplaced="YES">
                                             <rect key="frame" x="310" y="0.0" width="140" height="107"/>
                                         </variation>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text=" " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7DB-Rr-kzZ">
-                                        <rect key="frame" x="0.0" y="227" width="480" height="107"/>
+                                        <rect key="frame" x="0.0" y="209" width="480" height="107"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="90"/>
                                         <color key="textColor" red="0.93725490199999995" green="0.94509803920000002" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -46,10 +44,10 @@
                                         </variation>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="nbF-8Y-DTI">
-                                        <rect key="frame" x="0.0" y="334" width="480" height="77"/>
+                                        <rect key="frame" x="0.0" y="325" width="480" height="77"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="77" id="fHv-9p-NqY"/>
+                                            <constraint firstAttribute="height" constant="77" id="FUU-z6-Kh2"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="45"/>
                                         <color key="textColor" red="0.93725490199999995" green="0.94509803920000002" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -61,7 +59,7 @@
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.40000000000000002" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="I9m-09-cew">
                                         <rect key="frame" x="0.0" y="411" width="480" height="109"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="109" id="X0s-MF-w3Y"/>
+                                            <constraint firstAttribute="height" constant="109" id="eVL-Ps-5YE"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="84"/>
                                         <color key="textColor" red="0.93725490199999995" green="0.94509803920000002" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -69,12 +67,12 @@
                                     </label>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="7DB-Rr-kzZ" firstAttribute="leading" secondItem="QoI-od-WDe" secondAttribute="leading" id="HI4-RU-OYG"/>
+                                    <constraint firstItem="nbF-8Y-DTI" firstAttribute="leading" secondItem="I9m-09-cew" secondAttribute="leading" id="8gS-Qa-6HY"/>
                                     <constraint firstAttribute="bottom" secondItem="I9m-09-cew" secondAttribute="bottom" id="Xxn-LE-dST"/>
-                                    <constraint firstItem="7DB-Rr-kzZ" firstAttribute="leading" secondItem="nbF-8Y-DTI" secondAttribute="leading" id="kq0-4G-G2g"/>
+                                    <constraint firstItem="7DB-Rr-kzZ" firstAttribute="leading" secondItem="QoI-od-WDe" secondAttribute="leading" id="czI-QL-ff2"/>
                                     <constraint firstAttribute="trailing" secondItem="I9m-09-cew" secondAttribute="trailing" id="o20-WO-kvD"/>
                                     <constraint firstItem="I9m-09-cew" firstAttribute="leading" secondItem="QoI-od-WDe" secondAttribute="leading" id="r2I-En-Wj4"/>
-                                    <constraint firstItem="nbF-8Y-DTI" firstAttribute="leading" secondItem="I9m-09-cew" secondAttribute="leading" id="yql-JK-JuO"/>
+                                    <constraint firstItem="7DB-Rr-kzZ" firstAttribute="leading" secondItem="nbF-8Y-DTI" secondAttribute="leading" id="xxZ-UK-gKI"/>
                                 </constraints>
                                 <variation key="default">
                                     <mask key="constraints">
@@ -101,20 +99,16 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Rlj-B5-IJm" firstAttribute="centerX" secondItem="QoI-od-WDe" secondAttribute="centerX" id="AXF-Kf-DuG"/>
-                            <constraint firstItem="QoI-od-WDe" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="40" id="AcM-Xk-WtY">
-                                <variation key="heightClass=compact" constant="0.0"/>
-                            </constraint>
-                            <constraint firstItem="ra3-zV-LPA" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="JIh-sI-IpH"/>
-                            <constraint firstItem="Rlj-B5-IJm" firstAttribute="centerY" secondItem="QoI-od-WDe" secondAttribute="centerY" id="R73-Yp-FTn"/>
-                            <constraint firstAttribute="bottom" secondItem="ra3-zV-LPA" secondAttribute="bottom" constant="20" symbolic="YES" id="Wji-Qp-b6j"/>
-                            <constraint firstItem="Rlj-B5-IJm" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="d2W-TM-15S"/>
-                            <constraint firstItem="QoI-od-WDe" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="40" id="f8u-oH-Z8g">
-                                <variation key="heightClass=compact" constant="0.0"/>
-                            </constraint>
-                            <constraint firstItem="Rlj-B5-IJm" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="m5l-R1-T5S"/>
-                            <constraint firstAttribute="trailing" secondItem="Rlj-B5-IJm" secondAttribute="trailing" id="o9h-h9-I48"/>
-                            <constraint firstItem="Rlj-B5-IJm" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="v2G-Vf-h99"/>
+                            <constraint firstItem="ra3-zV-LPA" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="0jr-jr-xzf"/>
+                            <constraint firstItem="Rlj-B5-IJm" firstAttribute="centerY" secondItem="QoI-od-WDe" secondAttribute="centerY" id="BoB-Dt-GCp"/>
+                            <constraint firstItem="Rlj-B5-IJm" firstAttribute="centerX" secondItem="QoI-od-WDe" secondAttribute="centerX" id="Qpa-VY-bz8"/>
+                            <constraint firstAttribute="bottom" secondItem="ra3-zV-LPA" secondAttribute="bottom" constant="20" symbolic="YES" id="Vfs-VE-J9a"/>
+                            <constraint firstAttribute="trailing" secondItem="Rlj-B5-IJm" secondAttribute="trailing" id="eLy-w8-PN6"/>
+                            <constraint firstItem="QoI-od-WDe" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="40" id="kNg-4X-Fws"/>
+                            <constraint firstItem="Rlj-B5-IJm" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="o67-jj-fAZ"/>
+                            <constraint firstItem="Rlj-B5-IJm" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="qIo-GA-B7C"/>
+                            <constraint firstItem="QoI-od-WDe" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="40" id="tHh-2I-YWd"/>
+                            <constraint firstItem="Rlj-B5-IJm" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="wND-6A-mah"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Tmz-U4-vjJ"/>
@@ -133,8 +127,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Winter" width="268" height="304"/>
         <image name="background" width="750" height="1334"/>
+        <image name="loop" width="200" height="200"/>
     </resources>
     <color key="tintColor" red="0.93725490199999995" green="0.94509803920000002" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
 </document>
