--- a/Days Until Seasons WatchKit 1 App/Base.lproj/Interface.storyboard
+++ b/Days Until Seasons WatchKit 1 App/Base.lproj/Interface.storyboard
@@ -50,7 +50,7 @@
                                 </group>
                             </items>
                         </group>
-                        <label alignment="left" text="1234" id="shu-sN-9XS">
+                        <label alignment="left" text="1234" minimumScaleFactor="0.5" id="shu-sN-9XS">
                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             <fontDescription key="font" style="UICTFontTextStyleTitle2"/>
                         </label>
